Complete tasks for third lab

--- a/smarthome/src/main/resources/messages_en.properties
+++ b/smarthome/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-sensor.create.message = New sensor is added %s
+sensor.search.error.message = Sensor with id %d is not existed
 sensor.update.message = Sensor info with id %d is updated %s
 sensor.delete.message = Sensor with id %d is removed %s
 url.create.name = Add a new sensor
