--- a/smarthome/src/main/resources/messages_pt.properties
+++ b/smarthome/src/main/resources/messages_pt.properties
@@ -1,4 +1,4 @@
-sensor.create.message = Adicionado novo sensor %s
+sensor.search.error.message = O sensor com id %d não existe
 sensor.update.message = Informações do sensor com id %d atualizadas %s
 sensor.delete.message = Sensor com ID %d removido %s
 url.create.name = Adicionar um novo sensor
