--- a/smarthome/src/main/resources/messages_rus.properties
+++ b/smarthome/src/main/resources/messages_rus.properties
@@ -1,4 +1,4 @@
-sensor.create.message = Добавлен новый датчик %s
+sensor.search.error.message = Датчик с id %d не существует
 sensor.update.message = Информация о датчике c id %d обнавлена %s
 sensor.delete.message = Датчик с id %d удалён %s
 url.create.name = Добавить новый датчик
